wip. Intro and tools slides done :sparkles:

--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
         ],
         "alias": {
           "components": "./components",
+          "slides": "./slides",
           "utils": "./utils",
           "styles": "./styles",
           "translations": "./translations",
